add unit testing

--- a/api/config.json
+++ b/api/config.json
@@ -1,5 +1,12 @@
 {
     "server": {
-        "address": "localhost:8080"
+        "address": ""
+    },
+    "api": {
+        "host": ""
+    },
+    "csv": {
+        "in": "",
+        "out": ""
     }
 }
